# merlin-ai

./: .gitignore  README.md  pyproject.toml  test_claude.py
merlin_ai/: __init__.py  ai_classes.py  data_classes.py  decorators.py  llm_classes.py  llm_client.py  model_config.py  prompts.py  settings.py  types.py
tests/: test_claude.py
